# great-harness-agent

./: .env.example  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_postgres.sh
app/: config.py  database.py  db.py  main.py  storage.py
app/agents/interviewer/: avatar_session.py  invite_sender.py  notification_sender.py  question_generator.py  shortlist_aggregator.py
app/agents/jd_manager/: jd_pipeline.py  repo_analyzer.py
app/agents/screener/: experienced_screener.py  fresher_screener.py  ranker.py  repo_analyzer.py  resume_parser.py
app/api/: audit.py  candidates.py  careers.py  interview_eval.py  interviews.py  offers.py  pipelines.py
app/graph/: pipeline.py  state.py
app/graph/nodes/: agent1_jd.py  agent2_screen.py  agent3_interview.py  agent4_schedule.py  checkpoints.py
app/integrations/: calendar.py  clawvatar.py  email.py  knowledgebase.py  llm.py
app/models/: pipeline.py
app/schemas/: pipeline.py
app/static/: dashboard-old.html  dashboard.html  interview.html  interview.html.bak
app/static/avatars/: interviewer.vrm
app/utils/: errors.py  retry.py  timeout_reminders.py
