[project]
name = "great-harness-agent"
version = "1.0.0"
description = "AI hiring pipeline — 4 agents, 14 sub-agents, Clawvatar avatar interviews"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "anthropic>=0.40.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "PyMuPDF>=1.24.0",
    "gitpython>=3.1.43",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
stt = [
    "faster-whisper>=1.0.0",
]
dashboard = [
    "streamlit>=1.38.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
